syntax = "proto3";

package sec09;

option java_multiple_files = true;
option java_package = "com.altuhin.models.sec09";

// Input validation and error handling

message BalanceCheckRequest {
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

service BankService {
  /**
   Unary
  - account number should be between 1 to 10;
   */

  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  /**
  Server Streaming
  (These are the some validation)
  - account number should be between 1 to 10
  - amount should be 10 multiplies
  - account should have enough balance
   */
  rpc Withdraw(WithdrawRequest) returns (stream Money);

}